@@ -294,6 +294,21 @@ sub validateTypedRow
 		       __('Limited rate'));
   }
 
+  # Check objects have members
+  my $objMod = EBox::Global->modInstance('objects');
+  foreach my $target (qw(source destination)) {
+      if ( defined ( $params->{$target} )) {
+          if ( $params->{$target}->subtype()->isa('EBox::Types::Select') ) {
+              my $srcObjId = $params->{$target}->value();
+              unless ( @{$objMod->objectAddresses($srcObjId)} > 0 ) {
+                  throw EBox::Exceptions::External(__x('Object {object} has no members. Please add at '
+                                                       . 'least one to add rules using this object',
+                                                       object => $params->{$target}->printableValue()));
+              }
+          }
+      }
+  }
+
   if ( $action eq 'update' ) {
     # Fill those parameters which is not changed
     my $oldRow = $self->row($params->{id});
