@@ -2,6 +2,9 @@
 	+ Use last model/view changes to get rid of the multitable code
 	+ Remove rules using an object when it's removed
 	+ Use services module
+	+ Adding a rule using an object with no members is now not
+	possible
+	+ Now rules are applied in PREROUTING chain to avoid NAT
 0.10.99
 	+ New release
 	+ Now traffic shaping rules are aware about gateway changes
